fork scala compile process to fix permgen error in ci builds